Update 'cpajoz13r-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:af67fdfa43787bd4333a809c5b8211298ab69e70@sha256:2d6f3ac1382285c97f9323599983fdb1e70071029abe6e587433503c8639e748

--- a/components/cpajoz13r-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/cpajoz13r-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: cpajoz13r-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:af67fdfa43787bd4333a809c5b8211298ab69e70@sha256:2d6f3ac1382285c97f9323599983fdb1e70071029abe6e587433503c8639e748
+          name: container-image
